--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ UVICORN_PORT = 8000
 # UVICORN_SSL_CERTFILE = "/var/lib/marzgosha/certs/example.com/fullchain.pem"
 # UVICORN_SSL_KEYFILE = "/var/lib/marzgosha/certs/example.com/key.pem"
 
+# RANDOM_CONFIGS = True
 
 # XRAY_JSON = "xray_config.json"
 # XRAY_SUBSCRIPTION_URL_PREFIX = "https://example.com"
