add auto delete inactive users after x days

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ UVICORN_PORT = 8000
 # XRAY_FALLBACKS_INBOUND_TAG = "INBOUND_X"
 
 # RANDOM_SUB_CONFIGS=True
+# AUTO_DELETE_INACTIVE_USERS = 30
+
 
 # TELEGRAM_API_TOKEN = 123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 # TELEGRAM_ADMIN_ID = 987654321, 123456789
