--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ UVICORN_PORT = 8000
 # XRAY_EXCLUDE_INBOUND_TAGS = "INBOUND_X INBOUND_Y"
 # XRAY_FALLBACKS_INBOUND_TAG = "INBOUND_X"
 
+# RANDOMIZE_SUB_CONFIGS=True
 
 # TELEGRAM_API_TOKEN = 123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 # TELEGRAM_ADMIN_ID = 987654321, 123456789
