add notice to .env.example

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,10 @@ UVICORN_PORT = 8000
 # NOTICE_INACTIVE_USERS = "inbound name"
 
 
+## notify user when account is inactive
+# NOTICE_INACTIVE_USERS = "inbound name"
+
+
 # SQLALCHEMY_DATABASE_URL = "sqlite:///db.sqlite3"
 
 ## Custom text for STATUS_TEXT variable
