--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,7 @@ UVICORN_PORT = 8000
 # SUB_SUPPORT_URL = "https://t.me/support"
 # SUB_UPDATE_INTERVAL = "12"
 # RANDOMIZE_SUBSCRIPTION_CONFIGS = True
+# NOTIFE_LOGINS = True
 
 ## notify user when account is inactive
 # NOTICE_INACTIVE_USERS = "inbound name"
