--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,7 @@ UVICORN_PORT = 8000
 # SUB_SUPPORT_URL = "https://t.me/support"
 # SUB_UPDATE_INTERVAL = "12"
 # RANDOMIZE_SUBSCRIPTION_CONFIGS = True
-# NOTIFE_LOGINS = True
+# NOTIFE_LOGINS = False
 
 # SQLALCHEMY_DATABASE_URL = "sqlite:///db.sqlite3"
 
