add custom sub configs

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,8 @@ UVICORN_PORT = 8000
 # SINGBOX_SUBSCRIPTION_TEMPLATE="singbox/default.json"
 # MUX_TEMPLATE="mux/default.json"
 
+# CUSTOM_SUB_CONFIGS = vless://... , vmess://... , trojan://...
+
 ## Enable JSON config for compatible clients to use mux, fragment, etc. Default False.
 # USE_CUSTOM_JSON_DEFAULT=True
 ## Your preferred config type for different clients
